# stock_optimization

./: .env.example  .env.prod.example  .gitignore  .mcp.json  .ws_build_manifest.sh  PERFORMANCE_OPTIMIZATION_REPORT.md  README.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  migration_state.json  overview.json  overview_architecture.puml  requirements.md
backend/: =3.10.0  Dockerfile  alembic.ini  mypy.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_frontier_report.py  003_add_chat_sessions.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  comparison.py  explainer.py  graph.py  nodes.py  prompts.py  state.py
backend/app/api/: __init__.py  health.py  websocket.py
backend/app/api/v1/: __init__.py  assets.py  chat.py  optimize.py  runs.py
backend/app/chat/: __init__.py  llm.py  prompts.py  schemas.py  service.py
backend/app/classical/: __init__.py  constraints.py  frontier.py  optimizer.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  logging.py  rate_limit.py  security.py
backend/app/data/: __init__.py  cache.py  fetcher.py  metrics.py  schemas.py  sector_tags.py
backend/app/db/: __init__.py  models.py  repository.py  session.py
backend/app/db/repositories/: __init__.py  runs.py
backend/app/engines/: __init__.py
backend/app/engines/classical/: __init__.py  metrics.py  optimizer.py  schemas.py
backend/app/engines/quantum/: __init__.py  base.py  dispatcher.py  metrics.py  qaoa_qiskit.py  qubo.py  schemas.py  vqe_pennylane.py
backend/app/quantum/: __init__.py  dispatcher.py  qaoa_solver.py  qubo.py  vqe_solver.py
backend/app/schemas/: __init__.py  chat.py  requests.py  responses.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/unit/: test_classical_optimizer.py  test_frontier.py  test_schemas.py
docs/: .env.confluence.example  PYTHON314_MIGRATION_VERIFICATION.md  SECURITY_ANALYSIS.md  confluence_config.yaml  confluence_uploader.py  index.html  index.md  requirements-confluence.txt  wiki.css
frontend/: DEPRECATED_API_AUDIT.md  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  (+2 more)
(+430 files in other folders)
