[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio-optimizer"
version = "0.1.0"
description = "Production-grade Portfolio Optimization Simulator — Classical + Quantum + Agent-First"
readme = {text = "Production-grade Portfolio Optimization Simulator", content-type = "text/plain"}
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Classical optimization
    "cvxpy>=1.5.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Quantum frameworks
    "qiskit>=1.1.0",
    "qiskit-aer>=0.14.0",
    "qiskit-algorithms>=0.3.0",
    "qiskit-optimization>=0.6.0",
    "pennylane>=0.36.0",
    # Agent orchestration
    "langgraph>=0.1.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    # Market data
    "yfinance>=0.2.40",
    "tenacity>=8.5.0",
    # Caching & task queue
    "redis[asyncio]>=5.0.0",
    "celery[redis]>=5.4.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Configuration & logging
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    # HTTP client
    "httpx>=0.27.0",
    # Monitoring / metrics
    "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "pandas-stubs>=2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]
addopts = "--cov=app --cov-report=term-missing -v"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
